# SVFProject

./: CMakeCache.txt  CMakeLists.txt  IR.sh  Makefile  build.sh  cmake_install.cmake  consG.dot  example.bc  example.c  example.h  example.ll  example.sliced  example.svf.bc  icfg.dot  icfg_path.txt  pag.dot  svfg.dot
CVE/: example.ll  example.svf.bc
CVE/CVE-2018-10685/: stream.c  stream.ll  stream.svf.bc
CVE/CVE-2018-11496/: stream.c  stream.ll  stream.svf.bc
CVE/CVE-2018-20592/: mxml-node.ll
sliced_cfgs/: main.txt
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/include/: AndersenPTA.h  UseLine.h
src/include/UAF/: UseAfterFreeChecker.h  UseProgSlice.h
src/lib/: test.cpp
src/lib/UAF/: UseAfterFreeChecker.cpp  UseProgSlice.cpp
